fixed css issue with dropdown menu's z-index

--- a/askbot/media/style/style.less
+++ b/askbot/media/style/style.less
@@ -390,6 +390,7 @@ body.user-messages {
     .dropdown-menu{
         border-top: none;
         left: 7%;
+        z-index: 10100;
         a{
             color: #666;
             height: 25px;
